# ssbgm

./: README.md  pyproject.toml
.github/workflows/: code-style-check-workflow-call.yaml  pytest-workflow-call.yaml  static-type-check-workflow-call.yaml
samples/: metropolis-adjusted-langevin-algorithm.ipynb  mixed_gaussian_distribution.ipynb  sklearn-datasets-sample-generator.ipynb
ssbgm/: __init__.py  exceptions.py  math.py  model.py  utils.py
tests/: test_model.py  test_utils.py
